--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,7 +3,9 @@
   <head>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css?family=Merriweather:300,700,900,300italic,400,400italic,700italic,900italic" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic" rel="stylesheet">
     <title><%= title %></title>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -17,7 +19,6 @@
       <% include partials/nav %>
       <%- body %>
     </main>
-    <% include  partials/footer %>
     <% include  partials/scripts %>
   </body>
   </html>
