--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,3 +21,45 @@ nav, footer,.page-footer  {
 	border-radius: 20px;
 }
 
+
+
+.SHead{
+	font-family: Gill Sans, Verdana;
+	font-size: 11px;
+	line-height: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold;
+}
+
+.LHead{
+	font-family: times, Times New Roman, times-roman, georgia, serif;
+	color: #444;
+	margin: 0;
+	padding: 0px 0px 6px 0px;
+	font-size: 51px;
+	line-height: 44px;
+	letter-spacing: -2px;
+	font-weight: bold;
+}
+
+
+.MHead{
+	font-family: times, Times New Roman, times-roman, georgia, serif;
+	font-size: 28px;
+	line-height: 40px;
+	letter-spacing: -1px;color: #444;
+}
+
+.PText{
+	font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+	font-size: 14px;
+	margin-top: .5em; color: #666;
+}
+
+p:first-letter{
+	text-transform: uppercase;
+}
+
+
+
