--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,35 @@
 <div class="container max-height section">
 	<div class="row">
-		<div class="col s6">
-
+		<div class="col s12 m6">
+			<div class="card">
+				<div class="card-image">
+					<img src="img/demo.jpg">
+					<span class="card-title LHead">Card Title</span>
+				</div>
+				<div class="card-content PText">
+					<p>I am a very simple card. I am good at containing small bits of information.
+					I am convenient because I require little markup to use effectively.</p>
+				</div>
+				<div class="card-action black">
+					<a href="#">This is a link</a>
+				</div>
+			</div>
 		</div>
-		<div class="col s6">
-			<div> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
-		</div>		
+		<div class="col s12 m6">
+
+			<article class="section">
+				<h2 class="LHead">Title</h2>
+				<div class="divider"></div>
+				<h3 class="SHead"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				</h3>
+				<p class="PText"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</article>		
+		</div>
 	</div>
 </div>
