--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,53 +13,184 @@ nav, footer,.page-footer  {
 	
 }
 
-.max-height{
+.maxH{
 	height: 100%;
+}
+.maxW{
+	width: 100%;
+}
+
+.mediumW{
+	width: 50%;
 }
 
 .radios20{
 	border-radius: 20px;
 }
 
+.padding5px{
+	padding: 5px;
+}
+
+.opacity1{
+	opacity: 0.1;
+}
+.opacity2{
+	opacity: 0.2;
+}
+.opacity3{
+	opacity: 0.4;
+}
+.opacity4{
+	opacity: 0.5;
+}
+.opacity5{
+	opacity: 0.6;
+}
+.opacity6{
+	opacity: 0.7;
+}
+.opacity8{
+	opacity: 0.8;
+}
+
+.opacity9{
+	opacity: 0.9;
+}
 
 
-.SHead{
-	font-family: Gill Sans, Verdana;
-	font-size: 11px;
-	line-height: 14px;
+.grid{
+	background-image: url(/img/Grid3.png);
+	background-repeat: repeat;
+}
+
+.blackCoffe{
+	background-color: #181818;
+}
+
+
+
+.BackDegrade{
+	background-color: #31D2F4;
+	background-image: -webkit-linear-gradient( 25deg, 
+		rgb(239,61,136) 0%, 
+		rgb(246,126,97) 61%,
+		rgb(253,190,57) 100%);
+
+}
+
+.margin-top10{
+	margin-top:10% !important;  
+}
+
+.margin-top20{
+	margin-top:20% !important; 
+}
+
+.margin-top30{
+	margin-top:30% !important; 
+}
+
+.margin-top40{
+	margin-top:40% !important; 
+}
+.margin-top50{
+	margin-top:50% !important; 
+}
+
+.paddin-sides{
+	padding: 5px 5px 5px 5px !important;
+}
+
+.padding10px{
+	padding: 10px !important;
+}
+
+.Nomargin{
+	margin: 0px 0px 0px 0px !important;
+	padding: 0px !important;
+};
+
+
+#entry {
+	display:  flex; /* Make the container element behave like a table */
+	width: 100%; /* Set full-width to expand the whole page */
+}
+
+#entry .col {
+	display: table-cell; /* Make elements inside the container behave like table cells */
+}
+
+
+.revealData{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	height: 100%;
+	width: 100%;
+	display: none;
+	/*transform: translateY(-100%);*/
+}
+
+
+.portafolio{
+	position: relative;
+}
+.showreveal:hover >.revealData{	
+	opacity: 0;
+	display: block;
+	color: white !important; 
+	animation: showme .5s;
+	animation-fill-mode: forwards;
+}
+
+.revealBottom{
+	position: absolute;
+	-moz-transform: rotate(320deg) translate(0px, 13px);
+	-webkit-transform: rotate(320deg) translate(0px, 13px);
+	-o-transform: rotate(320deg) translate(0px, 13px);
+	-ms-transform: rotate(320deg) translate(0px, 13px);
+	transform: rotate(320deg) translate(0px, 13px);
+	bottom: 0%;
+	z-index: 100;
+}
+
+.paddingText{
+	padding: 15px 0 15px 0;
+}
+
+.revealData h3::first-letter {
 	text-transform: uppercase;
-	letter-spacing: 2px;
-	font-weight: bold;
+	color: red;
 }
 
-.LHead{
-	font-family: times, Times New Roman, times-roman, georgia, serif;
-	color: #444;
-	margin: 0;
-	padding: 0px 0px 6px 0px;
-	font-size: 51px;
-	line-height: 44px;
-	letter-spacing: -2px;
-	font-weight: bold;
+.articleDemo{
+	height: 500px;
+	
 }
 
-
-.MHead{
-	font-family: times, Times New Roman, times-roman, georgia, serif;
-	font-size: 28px;
-	line-height: 40px;
-	letter-spacing: -1px;color: #444;
+.hideScroll{
+	/*overflow: hidden;*/
 }
 
-.PText{
-	font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
-	font-size: 14px;
-	margin-top: .5em; color: #666;
+.WithScroll{
+	overflow-y: auto: ;
+
 }
 
-p:first-letter{
-	text-transform: uppercase;
+.articleDemo article{
+	height: 50px;
+	width: 100%;
 }
 
+header, main, footer {
+	/*padding-left: 300px;*/
+}
 
-
+@media only screen and (max-width : 992px) {
+	header, main, footer {
+		/*padding-left: 0;*/
+	}
+}
