--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-  <footer class="page-footer">
+  <footer id="containerParticles" class="page-footer black">
 
     <div class="footer-copyright">
       <div class="container">
